fixed z-index of in-page-search to appear above associationSider, set file preview image picker to only work from within electron

--- a/src/components/electron/ElectronSearch.less
+++ b/src/components/electron/ElectronSearch.less
@@ -1,6 +1,6 @@
 .electron-search {
   position: fixed;
-  z-index: 100;
+  z-index: 1001;
   right: 0px;
   bottom: 0px;
   // width: 100%;
